--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,18 @@ body {
     align-items: center;
     justify-content: center;
     color: white;
-    text-shadow: 0 0 1px black, 0 0 10px black;
+    text-shadow: 0 0 1px black, 0 0 5px black, 0 0 10px black;
 }
 
 h1 {
     margin: 0;
     font-size: 4rem;
     font-weight: normal;
+}
+
+.banner p {
+    margin-top: 0;
+    font-size: 1.2rem;
 }
 
 nav {
@@ -52,8 +57,12 @@ nav a {
     text-decoration: none;
 }
 
+nav li.active a {
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
 nav a:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 .user-menu {
@@ -63,8 +72,9 @@ nav a:hover {
 }
 
 .main {
-    padding: 3rem;
     max-width: 96rem;
+    padding: 3rem;
+    margin: auto;
 }
 
 h2 {
