--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,24 @@ h2 {
     font-size: 2rem;
     font-weight: normal;
 }
+
+.image-container {
+    padding-bottom: 1rem;
+}
+
+.image-container p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.image-container.left {
+    float: left;
+    margin-right: 1rem;
+}
+
+.image-container.right {
+    float: right;
+    margin-left: 1rem;
+}
