--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
 .main a:link, .main a:visited {
     color: #096AC9;
 }
+
 .main a:hover, .main a:active {
     color: #096AC9;
     background-color: rgba(9, 106, 201, 0.1);
@@ -27,6 +28,17 @@ body {
     justify-content: center;
     color: white;
     text-shadow: 0 0 1px black, 0 0 5px black, 0 0 10px black;
+}
+
+.grid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.grid .column {
+    margin: 0;
 }
 
 h1 {
