--- a/css/form.css
+++ b/css/form.css
@@ -37,6 +37,7 @@ textarea {
 }
 
 button, .button, input[type="button"], input[type="submit"] {
+    display: inline-block;
     border: 1px solid transparent;
     border-radius: 2px;
     background-color: #DDDDDD;
