--- a/css/forum.css
+++ b/css/forum.css
@@ -13,11 +13,15 @@
     font-size: 1rem;
 }
 
+.pagination li.elision {
+    padding: 0.6rem;
+}
+
 .pagination li a {
     display: inline-block;
     border: 1px solid #096AC9;
     background-color: white;
-    padding: 0.6rem 1rem;
+    padding: 0.6rem 0.8rem;
     color: #096AC9;
     text-decoration: none;
 }
