--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin: 1rem 0;
 }
 
 .grid .column {
