--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
     display: flex;
     margin: 0;
     height: 14rem;
-    /* background: url('../img/banner/105.png') bottom; */
+    background: url('../img/banner/105.png') bottom;
     box-shadow: 0 0 1rem black inset;
     flex-direction: column;
     align-items: center;
