--- a/css/form.css
+++ b/css/form.css
@@ -7,26 +7,61 @@ form.right {
 }
 
 form table td {
+    vertical-align: top;
     padding: 0.5rem 1rem 0.5rem 0;
+}
+
+form table td:first-child {
+    max-width: 15rem;
+    padding: 0.9rem 1rem 0.9rem 0;
+}
+
+form table h3 {
+    margin: 0;
+    font-size: 1rem;
+}
+
+form table td p {
+    margin: 0;
+    font-size: 0.9rem;
+    color: #666;
 }
 
 form .final-action {
     text-align: right;
 }
 
-input[type="text"], input[type="password"], textarea {
+input[type="text"], input[type="password"], input[type="email"], textarea {
+    min-width: 15rem;
     border: 1px solid #CCCCCC;
     border-radius: 2px;
     padding: 0.4rem 0.5rem;
 }
 
-input[type="text"]:hover, input[type="password"]:hover, textarea:hover {
+input[type="text"]:hover, input[type="password"]:hover, input[type="email"]:hover, textarea:hover {
     border: 1px solid #B0B0B0;
 }
 
-input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, textarea:focus {
     border: 1px solid #999999;
     box-shadow: 0 1px 1px #DDDDDD inset;
+}
+
+.stacked-input input {
+    display: block;
+    margin: -1px 0 0;
+    border-radius: 0;
+}
+
+.stacked-input label:first-of-type input {
+    margin: 0;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.stacked-input label:last-of-type input {
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 textarea {
