--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,18 @@ body {
     margin: 0;
 }
 
+.message {
+    display: inline-block;
+    margin: 1rem 0;
+    border: 2px solid #097EDF;
+    border-radius: 2px;
+    padding: 0.5rem 1rem;
+}
+
+.message.error {
+    border: 2px solid #FF6528;
+}
+
 h1 {
     margin: 0;
     font-size: 4rem;
