--- a/css/form.css
+++ b/css/form.css
@@ -101,3 +101,7 @@ button.primary:hover, .button.primary:hover, input[type="button"].primary:hover,
     background-color: #097EDF !important;
     border: 1px solid transparent;
 }
+
+.post-text {
+    width: 80%;
+}
