--- a/css/main.css
+++ b/css/main.css
@@ -43,15 +43,15 @@ body {
 }
 
 .message {
-    display: inline-block;
     margin: 1rem 0;
-    border: 2px solid #097EDF;
+    border: 1px solid #097EDF;
+    border-left-width: 0.5rem;
     border-radius: 2px;
     padding: 0.5rem 1rem;
 }
 
 .message.error {
-    border: 2px solid #FF6528;
+    border-color: #FF6528;
 }
 
 h1 {
