started implementing viewing & editing permissions

--- a/css/forums.css
+++ b/css/forums.css
@@ -176,6 +176,11 @@
     color: #FF6528;
 }
 
+.post.forbidden {
+    padding-top: 2.5rem;
+    text-align: center;
+}
+
 .avatar {
     display: block;
     max-width: 9rem;
