--- a/css/form.css
+++ b/css/form.css
@@ -105,3 +105,8 @@ button.primary:hover, .button.primary:hover, input[type="button"].primary:hover,
 .post-text {
     width: 80%;
 }
+
+.thread-title {
+    width: 80%;
+    font-weight: bold;
+}
