--- a/css/form.css
+++ b/css/form.css
@@ -188,6 +188,29 @@ button.primary:hover, .button.primary:hover, input[type="button"].primary:hover,
     font-size: 1rem;
 }
 
+select {
+    display: inline-block;
+    border: 1px solid #AAAAAA;
+    border-radius: 2px;
+    background: url('../img/arrow_down.png') right 1rem center no-repeat;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    color: #333333 !important;
+    text-decoration: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+select:hover {
+    background-color: #E4E4E4;
+}
+
+option {
+    background-color: white;
+    padding-right: 1.5rem;
+}
+
 .post-text {
     width: 80%;
 }
