--- a/css/forums.css
+++ b/css/forums.css
@@ -189,6 +189,10 @@
     overflow-x: hidden;
 }
 
+.post .content img {
+    max-width: 100%;
+}
+
 .post .signature {
     margin-top: 2rem;
     border-top: 1px solid #888888;
@@ -223,27 +227,27 @@
     margin-left: 0.3rem;
 }
 
-.quote .box,
-.code .box,
-.spoiler .box {
+.quote > .box,
+.code > .box,
+.spoiler > .box {
     border: 1px solid #AAAAAA;
     border-radius: 1px;
     background-color: #F8F8F8;
     padding: 0.5rem 1rem;
 }
 
-.code .box {
+.code > .box {
     max-height: 20rem;
     overflow-y: auto;
     font-family: monospace;
     white-space: pre-wrap;
 }
 
-.code .box br {
+.code > .box br {
     display: none;
 }
 
-.spoiler .box {
+.spoiler > .box {
     margin-top: 0.5rem;
     display: none;
 }
@@ -268,7 +272,6 @@
 .inline-spoiler:hover > .inner {
     visibility: visible !important;
 }
-
 
 /* user list */
 
