--- a/css/forums.css
+++ b/css/forums.css
@@ -193,6 +193,10 @@
     max-width: 100%;
 }
 
+.post.preview {
+    margin-bottom: 4rem;
+}
+
 .post .signature {
     margin-top: 2rem;
     border-top: 1px solid #888888;
