--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,10 @@ body {
     margin: 0;
 }
 
+.grid .column:last-child {
+    text-align: right;
+}
+
 .message {
     margin: 1rem 0;
     border: 1px solid #097EDF;
