--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,15 @@ nav a:hover {
     background-color: rgba(255, 255, 255, 0.25);
 }
 
+.badge {
+    margin-left: 0.2rem;
+    background-color: #FF241C;
+    box-shadow: 0 0 2px #FF241C;
+    border-radius: 2px;
+    padding: 0 0.3rem;
+    color: white;
+}
+
 .main {
     max-width: 100rem;
     padding: 3rem;
