designed news section on home page

--- a/css/main.css
+++ b/css/main.css
@@ -178,3 +178,72 @@ hr {
 .fa {
     font-size: 14px !important;
 }
+
+.home-page-grid {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
+.welcome {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+    padding-right: 2rem;
+}
+
+.news {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    border-left: 1px solid #AAA;
+    padding-left: 2rem;
+    max-width: 36rem;
+}
+
+.news h3 {
+    margin-bottom: 0;
+    font-size: 1.3rem;
+}
+
+.news .news-article {
+    margin-bottom: 2rem;
+}
+
+.news .news-article:not(:last-child) {
+    padding-bottom: 2rem;
+    border-bottom: 1px solid #AAA;
+}
+
+.news .news-subtitle {
+    margin: 0;
+    font-size: 0.9rem;
+    color: #666;
+}
